--- a/style.css
+++ b/style.css
@@ -228,3 +228,16 @@ main {
   border-width: 0 2px 2px 0;
   transform: rotate(45deg);
 }
+
+.todo-list-container-top input[type="text"] {
+  width: 100%;
+  border: none;
+  background-color: transparent;
+  color: var(--dark-light-grayish-blue);
+  font-size: 1rem;
+  font-weight: 100;
+}
+
+.todo-list-container-top input[type="text"]:focus {
+  outline: none;
+}
