--- a/style.css
+++ b/style.css
@@ -35,9 +35,10 @@
 
 body {
   min-height: 100vh;
-  min-width: 100vw;
+  width: 100%;
   transition: background-color 0.3s ease;
   background-image: url("./images/bg-desktop-dark.jpg");
+  background-size: 100% auto;
   background-repeat: no-repeat;
   background-color: black;
 }
